Fix: horizontal scroll for product slider

--- a/src/scss/layout/_products.scss
+++ b/src/scss/layout/_products.scss
@@ -1,6 +1,7 @@
 .products {
   position: relative;
   padding: 4rem 0 0;
+  overflow-x: hidden;
 
   &__heading {
     color: $primary-color;
